--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -1,10 +1,16 @@
-.PreInterviewApp {
+/* .PreInterviewApp {
     position: relative;
     width: "100%";
     height: 1060px;
     padding-left: 140px;
     padding-right: 140px;
-  }
+  } */
+
+.PreInterviewApp {
+    width: 100%;
+    height: auto;
+    left: 0vw;
+}
 
 .PreInterviewAppFooter {
     position: relative;
